[refs #445] fix issue with the menu button being incorrectly aligned
There was an issue with the Menu button aligning away from the right
side when there was no search button

--- a/packages/components/header/_header.scss
+++ b/packages/components/header/_header.scss
@@ -392,9 +392,6 @@
 
   @include mq($until: desktop) {
     margin-right: 0; /* [11] */
-    position: absolute;
-    right: 252px;
-    top: 0;
   }
 
   @include mq($until: tablet) {
